--- a/1.html
+++ b/1.html
@@ -32,6 +32,7 @@
 				India: ['UP', 'MP', 'Bihar'],
 				Japan: ['Tokyo', 'Yokohama'],
 				US: ['California', 'Texas'],
+				name: ['textfield']
 			}
 			$scope.addRow = function() {
 				$scope.models.push({});
